added feature endpoint
