# common/swagger/swagger.yaml
@@ -64,6 +64,30 @@ paths:
           description: Successful operation
           schema:
             $ref: '#/definitions/ScoreRequest'
+  '/model/features':
+    get:
+      tags:
+        - enabled features
+      summary: list of features enabled in a scorer
+      description: >
+        Returns unique list of features enabled in a specific scorer.
+        This list has to be manually populated for each new feature added to the scorer.
+        Enum FeatureType contains list of all features a scorer can currently contain.
+      operationId: getFeatures
+      produces:
+        - text/plain
+      parameters: [ ]
+      responses:
+        '200':
+          description: Successful operation
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/FeatureType'
+        '501':
+          description: Implementation not supported
+      security:
+        - api_key: [ ]
   '/model/score':
     post:
       tags:
@@ -331,3 +355,6 @@ definitions:
   ScoringType:
     type: string
     enum: [ REGRESSION, CLASSIFICATION, BINOMIAL ]
+  FeatureType:
+    type: string
+    enum: [ SCORE, TRANSFORMED_SHAPLEY_CONTRIBUTION, ORIGINAL_SHAPLEY_CONTRIBUTION ]
